# Adoraburu-RE

./: .gitignore  README.md
AdoRaburu_RE/: Landing.js  StyleLanding.css  index.html
AdoRaburu_RE/pages/: 404.css  404.html  404.js
AdoRaburu_RE/pages/Songlist/: songlist.css  songlist.html  songlist.js
AdoRaburu_RE/pages/TEMPLATEPAGE/: template.css  template.html  template.js
AdoRaburu_RE/pages/readymade/: Landing.js  StyleLanding.css  index.html
AdoRaburu_RE/pages/show/: show.css  show.html  show.js
AdoRaburu_RE/pages/unravel/: unravel.css  unravel.html  unravel.js
AdoRaburu_RE/pages/usseewa/: Landing.js  index.html
adora-k8s-files/: Install-Adorabu.sh  apimanifest.yaml  grafana-values.yaml  loki-values.yaml  nginx-cong.yaml  prometh-values.yaml  promtail-values.yaml  pvolume.yaml
adoraburu_re-api/: Cargo.toml  Dockerfile
adoraburu_re-api/src/: main.rs
